# sentiment-analysis-gke-pipeline

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile_Inference  Dockerfile_training  README.md  env_variables.list
.github/deprecated_workflows/: gcp-deploy-main.yaml
.github/workflows/: azure-deploy-main.yaml  gcp-deploy-main.yaml  gcp-train-model.yaml  publish-container-to-hub.yaml  publish-to-pypi.yml  push-frontend-container-to-hub.yaml  push-inference-container-to-hub.yaml  push-mongoservice-container-to-hub.yaml  push-training-container-to-hub.yaml  pytests-all-modules.yml  python-package-conda.yml
common/: requirements.txt  utils.py
kubernetes-manifests/: frontend.yaml  inference-service.yaml  mongo-service.yaml
sa_app/config_files/: app_cfg.yml  mapping.txt  rules.properties
sa_app/dashboard/: Dockerfile_dashboard  README.md  app.py  app_cfg.yml  gather_tweets.py  requirements.txt  sample.csv
sa_app/mongo_service/: Dockerfile  app.py  app_cfg.yml  requirements.txt  tweet_collection.py  utils.py
sa_app/scripts/: wandb_init.py
sa_app/src/: pyproject.toml  requirements.txt
sa_app/src/sa_app/: __init__.py  app.py  inference_app.py
sa_app/src/sa_app/common/: __init__.py  utils.py
sa_app/src/sa_app/data/: data.py  data_cleaner.py  kaggle_dataset.py
sa_app/src/sa_app/inference/: inference.py
sa_app/src/sa_app/models/: model.py
sa_app/src/sa_app/training/: lightning_model_wrapper.py
sa_app/src/tests/: data_module_test.py  inference_module_test.py  train_module_test.py
sa_app/src/tests/test_data/: test_app_cfg.yml
sa_train/: requirements.txt  train_cfg.yml
sa_train/sa_train_module/: train.py
sa_train/sa_train_module/data/: data.py  data_cleaner.py  kaggle_dataset.py
sa_train/sa_train_module/training/: lightning_model_wrapper.py  optmizer.py
