[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sa_app"
version = "1.0.0"
authors = ["prabhu <prabhupad26@gmail.com>"]
description="Sentiment analyzer app"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.10"
transformers = "4.28.1"
torch = "2.0.1"
pandas = "1.5.1"
pytorch-lightning = "2.0.4"
wandb = "^0.14.2"
nltk = "^3.8.1"
spacy = "3.6.0"
flask = "^2.3.2"


[project.scripts]
sa_app = "sa_app.app:main"
inference_app = "sa_app.inference_app:main"
